# Time

./: Dockerfile  README.md  README.rst  pyproject.toml
tests/: test_time.py
time/: main.py
time/static/: _style.css  alt.css
time/templates/: footer.html  header.html  humans.txt  index.html  setcookie.html  stare.html  vroom.html
