[tool.poetry]
name = "time"
version = "0.2.0"
description = "A tool to display multiple timezones."
authors = ["Dan <dan@3264.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pytz = "^2022.6"
DateTime = "^4.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
